# orthophotos-downloader

./: PR_DESCRIPTION.md  README.md  auto_downloader_docs.py  download_city_new.py  orthophotos-downloader-1.code-workspace  pyproject.toml  simple_visualize_tiffs.py
examples/: demo_auto_downloader.ipynb  demo_bavaria_download.ipynb
examples/data/: building_mask_bayern_census_buffer_100.geojson  test_area.geojson
src/orthophotos_downloader/: __init__.py
src/orthophotos_downloader/data_scraping/: __init__.py  auto_downloader.py  image_download.py  wms_germany.py
src/orthophotos_downloader/utils/: logging.py
